--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mysql:
-    container_name: bamdoliro_stupetition_local
+    container_name: bamdoliro_stupetition_mysql
     image: mysql/mysql-server:5.7
     environment:
       MYSQL_ROOT_HOST: "%"
@@ -15,3 +15,11 @@ services:
       - "mysqld"
       - "--character-set-server=utf8mb4"
       - "--collation-server=utf8mb4_unicode_ci"
+
+  redis:
+    image: redis:latest
+    container_name: bamdoliro_stupetition_redis
+    hostname: bamdoliro
+    command: redis-server --port 6379
+    ports:
+      - "6379:6379"
