--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Problem with hibernate-core 5.6.7.Final which was causing issue with 'startingWith'
+	// https://github.com/spring-projects/spring-data-jpa/issues/2472
+	// https://hibernate.atlassian.net/browse/HHH-15142
+	// TODO Temporarily revert to 5.6.5.Final until fixed
+	implementation 'org.hibernate:hibernate-core:5.6.5.Final'
 }
 
 tasks.named('test') {
