--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,13 @@ spring:
     host: localhost
     port: 6379
 
+  batch:
+    jdbc:
+      initialize-schema: always
+      table-prefix: batch_
+    job:
+      enabled: false
+
 debug: true
 ---
 spring:
