--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,44 @@ debug: true
 spring:
   config:
     activate:
+      on-profile: dev
+
+  datasource:
+    url: jdbc:mysql://mysql:3306/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true
+    username: ${DB_USER}
+    password: ${DB_PWD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+
+  jwt:
+    secret: ${JWT_SECRET}
+
+  cache:
+    type: redis
+
+  redis:
+    host: redis
+    port: 6379
+
+  batch:
+    jdbc:
+      initialize-schema: never
+      table-prefix: batch_
+    job:
+      enabled: false
+
+debug: true
+---
+spring:
+  config:
+    activate:
       on-profile: product
 
   jpa:
