ADD :: 기간 만료 (#37)
- 기간 만료 방식 getStatus할 때마다 하는 걸로
- query할 때 기간 validation

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PWD}
       MYSQL_DATABASE: ${DB_NAME}
+      TZ: Asia/Seoul
     ports:
       - "3306:3306"
     command:
