--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,16 +2,16 @@ version: '3'
 
 services:
   mysql:
-    container_name: ${DB_NAME}
+    container_name: bamdoliro_stupetition_mysql
     image: mysql/mysql-server:5.7
     environment:
       MYSQL_ROOT_HOST: "%"
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: "bamdoliro"
+      MYSQL_PASSWORD: "bamdoliro"
+      MYSQL_DATABASE: "bamdoliro_stupetition"
       TZ: Asia/Seoul
     ports:
-      - "3306:3306"
+      - "3308:3306"
     command:
       - "mysqld"
       - "--character-set-server=utf8mb4"
@@ -20,19 +20,7 @@ services:
   redis:
     image: redis:latest
     container_name: bamdoliro_stupetition_redis
+    hostname: bamdoliro
     command: redis-server --port 6379
     ports:
       - "6379:6379"
-
-  application:
-    build: .
-    expose:
-      - 8080
-    ports:
-      - "8080:8080"
-    env_file:
-      - .env
-    depends_on:
-      - mysql
-    environment:
-      - TZ="Asia/Seoul"
