--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,13 @@ DB_USERNAME=string
 DB_PASSWORD=string
 DB_PORT=number
 DB_HOST=string
-JWT_SECRET=string
 REDIS_PASSWORD=string
+JWT_SECRET=string
+
+DOCKER_USERNAME=string
+DOCKER_REPO=string
+
+GOOGLE_BASE_URL=string
+GOOGLE_CLIENT=string
+GOOGLE_REDIRECT=string
+GOOGLE_SECRET=string
