--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	// https://hibernate.atlassian.net/browse/HHH-15142
 	// TODO Temporarily revert to 5.6.5.Final until fixed
 	implementation 'org.hibernate:hibernate-core:5.6.5.Final'
+	
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
 }
 
 tasks.named('test') {
