--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,17 @@ spring:
 
   cache:
     type: redis
+
+  jwt:
+    secret: ${JWT_SECRET}
+
+auth:
+  google:
+    base-url: ${GOOGLE_BASE_URL}
+    client-id: ${GOOGLE_CLIENT}
+    client-secret: ${GOOGLE_SECRET}
+    redirect-url: ${GOOGLE_REDIRECT}
+
 ---
 spring:
   config:
