--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,11 +18,13 @@ services:
       - "--collation-server=utf8mb4_unicode_ci"
 
   redis:
-    image: redis:latest
+    image: redis:7.0-alpine
     container_name: bamdoliro_stupetition_redis
-    command: redis-server --port 6379
+    command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    env_file:
+      - .env
     ports:
-      - "6379:6379"
+      - 6379:6379
 
   application:
     build:
