--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,7 @@ spring:
 
   redis:
     host: redis
+    password: ${REDIS_PASSWORD}
 
 debug: true
 ---
@@ -77,5 +78,6 @@ spring:
 
   redis:
     host: localhost
+    password: bamdoliro
 
 debug: true
