--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
@@ -45,6 +44,7 @@ dependencies {
 	implementation 'org.hibernate:hibernate-core:5.6.5.Final'
 	
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.4'
+
 }
 
 tasks.named('test') {
